# rstructor

./: .cargoignore  .gitignore  ANALYSIS_SUMMARY.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  EXAMPLES_RUN_SUMMARY.md  FEATURE_ANALYSIS.md  LICENSE  README.md  release.sh
.cursor/rules/: model-lookup-rule.mdc
.github/workflows/: clippy.yml  examples.yml  fmt.yml  test.yml
examples/: anthropic_multimodal_example.rs  container_attributes_example.rs  container_description_example.rs  custom_type_example.rs  enum_example.rs  enum_with_data_example.rs  event_planner.rs  gemini_multimodal_example.rs  grok_multimodal_example.rs  logging_example.rs  manual_implementation.rs  medical_example.rs  mock_testing_example.rs  movie_example.rs  nested_enum_example.rs  nested_objects_example.rs  news_article_categorizer.rs  openai_multimodal_example.rs  recipe_extractor.rs  serde_rename_example.rs  streaming_example.rs  structured_movie_info.rs  token_usage_example.rs  tool_calling_example.rs  validation_example.rs  weather_example.rs
rstructor_derive/: .cargoignore  Cargo.toml
rstructor_derive/src/: container_attrs.rs  lib.rs  type_utils.rs
rstructor_derive/src/generators/: enum_schema.rs  mod.rs  struct_schema.rs
rstructor_derive/src/parsers/: array_parser.rs  array_parser_tests.rs  field_parser.rs  mod.rs  variant_parser.rs
rstructor_derive/tests/: array_literal_tests.rs  date_format_tests.rs  edge_cases_tests.rs  enum_date_format_tests.rs  enum_with_data_tests.rs  internally_tagged_tests.rs
src/: lib.rs  logging.rs
src/backend/: anthropic.rs  any_client.rs  client.rs  gemini.rs  grok.rs  media.rs  messages.rs  mock.rs  mod.rs  model_macro.rs  openai.rs  openai_compatible.rs  request.rs  streaming.rs  tools.rs  usage.rs  utils.rs
src/error/: mod.rs
src/model/: instructor.rs  llm_model.rs  mod.rs
src/schema/: builder.rs  custom_type.rs  mod.rs  primitives.rs  tests.rs
tests/: anthropic_multimodal_tests.rs  anthropic_validation_test.rs  anyclient_env_tests.rs  complex_enum_integration_tests.rs  container_attributes_tests.rs  container_description_tests.rs  conversation_history_tests.rs  core_ergonomics_test.rs  custom_type_schema_tests.rs  derive_macro_tests.rs  derive_rename_enum_tests.rs  derive_schema_offline_tests.rs  error_tests.rs  example_validation_tests.rs  gemini_multimodal_tests.rs  grok_multimodal_tests.rs  grok_validation_test.rs  hashmap_integration_tests.rs  http_mock_tests.rs  instructor_tests.rs  integration_tests.rs  llm_integration_tests.rs  llm_model_tests.rs  mock_client_tests.rs  mock_edge_tests.rs  model_string_test.rs  nested_enum_tests.rs  nested_struct_tests.rs  nested_validation_tests.rs  offline_smoke_tests.rs  openai_enum_anyof_test.rs  openai_multimodal_tests.rs  openai_validation_test.rs  provider_offline_tests.rs  recursive_structures_tests.rs  schema_builder_tests.rs  schema_validation_tests.rs  serde_rename_tests.rs  streaming_tests.rs  timeout_tests.rs  (+5 more)
tests/common/: mod.rs
