[package]
name = "rstructor"
version = "0.1.17"
edition = "2024"
description = "A Rust library for structured outputs from LLMs with validation"
license = "MIT"
repository = "https://github.com/clifton/rstructor"
authors = ["Clifton King <cliftonk@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/rstructor"
keywords = ["llm", "openai", "anthropic", "validation", "json-schema"]
categories = [
  "api-bindings",
  "web-programming",
  "parsing",
  "data-structures",
  "text-processing",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "io-std",
], optional = true }
reqwest = { version = "0.12.15", features = ["json"], optional = true }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-futures = { version = "0.2", optional = true }
rstructor_derive = { version = "0.1.17", path = "./rstructor_derive", optional = true }
chrono = "0.4" # For date/time validation in examples

# Feature flags
[features]
default = ["openai", "anthropic", "grok", "gemini", "derive", "logging"]
openai = ["reqwest", "tokio"]
anthropic = ["reqwest", "tokio"]
grok = ["reqwest", "tokio"]
gemini = ["reqwest", "tokio"]
derive = ["rstructor_derive"]
logging = ["tracing-subscriber", "tracing-futures"]

[workspace]
members = ["rstructor_derive"]

