[package]
name = "rstructor_derive"
version = "0.2.10"
edition = "2024"
description = "Derive macros for the rstructor library"
license = "MIT"
repository = "https://github.com/clifton/rstructor"
authors = ["Clifton King <cliftonk@gmail.com>"]
documentation = "https://docs.rs/rstructor_derive"
exclude = [
  # Backup files from sed/editors
  "*.orig",
  "*.bak",
]
keywords = ["derive", "json-schema", "llm", "pydantic", "instructor"]
categories = [
  "development-tools::procedural-macro-helpers",
  "api-bindings",
  "parsing",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
serde_json = "1.0.149"

[dev-dependencies]
rstructor = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde"] }
